--- a/top.html
+++ b/top.html
@@ -22,20 +22,36 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="index.css">
   <meta name="theme-color" content="#fafafa">
+  
 </head>
 
 
 
 <body class="red" >
+ <img src="logo.png" class="intuition" >
 
+  <section class="accordion">
+    <div class="accordion__container">
+      <h4 class="accordion__title js-accordion-title">1~4の選択肢</h4>
+      <div class="accordion__content">
+        <button  type="button" class="btn btn-primary">押す</button>
+      </div>
 
+      <h4 class="accordion__title js-accordion-title">ア〜ウの選択肢</h4>
+      <div class="accordion__content">
+        <button type="button" class="btn btn-primary">押す</button>
+      </div>
 
+      <h4 class="accordion__title js-accordion-title">◯か×</h4>
+      <div class="accordion__content">
+        <button type="button" class="btn btn-primary">押す</button>
+      </div>
 
-
-
-
-
-
-
+      <h4 class="accordion__title js-accordion-title">サイコロ</h4>
+      <div class="accordion__content">
+        <button type="button" class="btn btn-primary">押す</button>
+      </div>
 
 </body>
+<script src="top.js"></script>
+</html>
