カスタマイズ

--- a/top.html
+++ b/top.html
@@ -52,6 +52,14 @@
         <button type="button" class="btn btn-primary">押す</button>
       </div>
 
+      <h4 class="accordion__title js-accordion-title">カスタマイズ</h4>
+      <div class="accordion__content">
+        <input type="text" id="number2" placeholder="半角数字を入力" />
+        <input type="button" value="入力" onclick="clickBtn3()" />
+        <p>1~ <span id="span2"></span>の選択肢</p>
+        
+        <button type="button" class="btn btn-primary">押す</button>
+      </div>
 </body>
 <script src="top.js"></script>
 </html>
