--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <button  type="button" class="btn btn-primary">押す</button>
       </div>
 
-      <h4 class="accordion__title js-accordion-title">ア〜ウの選択肢</h4>
+      <h4 class="accordion__title js-accordion-title">ア〜エの選択肢</h4>
       <div class="accordion__content">
         <button type="button" class="btn btn-primary">押す</button>
       </div>
